functions/firebase-debug.log
[debug] [2020-11-10T10:01:35.840Z] ----------------------------------------------------------------------
[debug] [2020-11-10T10:01:35.841Z] Command:       /home/motherbase/.nvm/versions/node/v8.13.0/bin/node /home/motherbase/.nvm/versions/node/v8.13.0/bin/firebase functions:shell
[debug] [2020-11-10T10:01:35.842Z] CLI Version:   8.15.1
[debug] [2020-11-10T10:01:35.842Z] Platform:      linux
[debug] [2020-11-10T10:01:35.842Z] Node Version:  v8.13.0
[debug] [2020-11-10T10:01:35.842Z] Time:          Tue Nov 10 2020 11:01:35 GMT+0100 (CET)
[debug] [2020-11-10T10:01:35.842Z] ----------------------------------------------------------------------
[debug] [2020-11-10T10:01:35.842Z] 
[debug] [2020-11-10T10:01:35.846Z] > command requires scopes: ["email","openid","https://www.googleapis.com/auth/cloudplatformprojects.readonly","https://www.googleapis.com/auth/firebase","https://www.googleapis.com/auth/cloud-platform"]
[debug] [2020-11-10T10:01:35.846Z] > authorizing via signed-in user
[debug] [2020-11-10T10:01:35.846Z] [iam] checking project chatfirebase-e4c74 for permissions ["firebase.projects.get"]
[debug] [2020-11-10T10:01:35.848Z] >>> HTTP REQUEST POST https://cloudresourcemanager.googleapis.com/v1/projects/chatfirebase-e4c74:testIamPermissions  
 {"permissions":["firebase.projects.get"]}
[debug] [2020-11-10T10:01:36.672Z] <<< HTTP RESPONSE 200 {"content-type":"application/json; charset=UTF-8","vary":"X-Origin, Referer, Origin,Accept-Encoding","date":"Tue, 10 Nov 2020 10:01:36 GMT","server":"ESF","cache-control":"private","x-xss-protection":"0","x-frame-options":"SAMEORIGIN","x-content-type-options":"nosniff","server-timing":"gfet4t7; dur=621","alt-svc":"h3-Q050=\":443\"; ma=2592000,h3-29=\":443\"; ma=2592000,h3-T051=\":443\"; ma=2592000,h3-T050=\":443\"; ma=2592000,h3-Q046=\":443\"; ma=2592000,h3-Q043=\":443\"; ma=2592000,quic=\":443\"; ma=2592000; v=\"46,43\"","accept-ranges":"none","transfer-encoding":"chunked"}
[debug] [2020-11-10T10:01:36.679Z] [functions] Using node@8 from host.
[debug] [2020-11-10T10:01:36.679Z] defaultcredentials: writing to file /home/motherbase/.config/firebase/josemanuel_hruiz_gmail.com_application_default_credentials.json
[debug] [2020-11-10T10:01:36.680Z] DEBUG: Setting GAC to /home/motherbase/.config/firebase/josemanuel_hruiz_gmail.com_application_default_credentials.json
[debug] [2020-11-10T10:01:36.686Z] [functions] Watching "/home/motherbase/Code/chatfirebase/functions" for Cloud Functions...
[debug] [2020-11-10T10:01:36.692Z] DEBUG: [worker-pool] addWorker(~diagnostic~)
[debug] [2020-11-10T10:01:36.692Z] DEBUG: [worker-pool] Adding worker with key ~diagnostic~, total=1
[debug] [2020-11-10T10:01:36.692Z] DEBUG: [worker-pool] submitWork(triggerId=)
[debug] [2020-11-10T10:01:36.692Z] DEBUG: [worker-~diagnostic~-dea3c775-58fd-4c5d-ad16-e4703a6a22f9]: Assigning socketPath: /tmp/fire_emu_8820.sock
[debug] [2020-11-10T10:01:36.692Z] DEBUG: [worker-~diagnostic~-dea3c775-58fd-4c5d-ad16-e4703a6a22f9]: BUSY
[debug] [2020-11-10T10:01:36.862Z] DEBUG: [runtime-status] [8820] Functions runtime initialized. {"cwd":"/home/motherbase/Code/chatfirebase/functions","node_version":"8.13.0"}
[debug] [2020-11-10T10:01:36.863Z] DEBUG: [runtime-status] [8820] Disabled runtime features: undefined
[debug] [2020-11-10T10:01:36.864Z] DEBUG: [runtime-status] [8820] Resolved module firebase-admin {"declared":true,"installed":true,"version":"9.3.0","resolution":"/home/motherbase/Code/chatfirebase/functions/node_modules/firebase-admin/lib/index.js"}
[debug] [2020-11-10T10:01:36.864Z] DEBUG: [runtime-status] [8820] Resolved module firebase-functions {"declared":true,"installed":true,"version":"3.11.0","resolution":"/home/motherbase/Code/chatfirebase/functions/node_modules/firebase-functions/lib/index.js"}
[debug] [2020-11-10T10:01:36.865Z] DEBUG: [runtime-status] [8820] Resolved module firebase-functions {"declared":true,"installed":true,"version":"3.11.0","resolution":"/home/motherbase/Code/chatfirebase/functions/node_modules/firebase-functions/lib/index.js"}
[debug] [2020-11-10T10:01:36.869Z] DEBUG: [runtime-status] [8820] Outgoing network have been stubbed. [{"name":"http","status":"mocked"},{"name":"http","status":"mocked"},{"name":"https","status":"mocked"},{"name":"https","status":"mocked"},{"name":"net","status":"mocked"}]
[debug] [2020-11-10T10:01:36.869Z] DEBUG: [runtime-status] [8820] Resolved module firebase-functions {"declared":true,"installed":true,"version":"3.11.0","resolution":"/home/motherbase/Code/chatfirebase/functions/node_modules/firebase-functions/lib/index.js"}
[debug] [2020-11-10T10:01:36.895Z] DEBUG: [runtime-status] [8820] Checked functions.config() {"config":{}}
[debug] [2020-11-10T10:01:36.895Z] DEBUG: [runtime-status] [8820] firebase-functions has been stubbed. {"functionsResolution":{"declared":true,"installed":true,"version":"3.11.0","resolution":"/home/motherbase/Code/chatfirebase/functions/node_modules/firebase-functions/lib/index.js"}}
[debug] [2020-11-10T10:01:36.895Z] DEBUG: [runtime-status] [8820] Resolved module firebase-functions {"declared":true,"installed":true,"version":"3.11.0","resolution":"/home/motherbase/Code/chatfirebase/functions/node_modules/firebase-functions/lib/index.js"}
[debug] [2020-11-10T10:01:36.895Z] DEBUG: [runtime-status] [8820] Resolved module firebase-admin {"declared":true,"installed":true,"version":"9.3.0","resolution":"/home/motherbase/Code/chatfirebase/functions/node_modules/firebase-admin/lib/index.js"}
[debug] [2020-11-10T10:01:36.896Z] DEBUG: [runtime-status] [8820] Resolved module firebase-functions {"declared":true,"installed":true,"version":"3.11.0","resolution":"/home/motherbase/Code/chatfirebase/functions/node_modules/firebase-functions/lib/index.js"}
[debug] [2020-11-10T10:01:36.896Z] DEBUG: [runtime-status] [8820] firebase-admin has been stubbed. {"adminResolution":{"declared":true,"installed":true,"version":"9.3.0","resolution":"/home/motherbase/Code/chatfirebase/functions/node_modules/firebase-admin/lib/index.js"}}
[debug] [2020-11-10T10:01:36.898Z] DEBUG: [runtime-status] [8820] initializeApp(DEFAULT) {"databaseURL":"https://chatfirebase-e4c74.firebaseio.com","storageBucket":"chatfirebase-e4c74.appspot.com","projectId":"chatfirebase-e4c74"}
[warn] ⚠  functions: The Cloud Firestore emulator is not running, so calls to Firestore will affect production. {"metadata":{"emulator":{"name":"functions"},"message":"The Cloud Firestore emulator is not running, so calls to Firestore will affect production."}}
[warn] ⚠  /home/motherbase/Code/chatfirebase/functions/node_modules/@google-cloud/firestore/build/src/collection-group.js:54
    async *getPartitions(desiredPartitionCount) {
          ^

SyntaxError: Unexpected token *
    at createScript (vm.js:80:10)
    at Object.runInThisContext (vm.js:139:10)
    at Module._compile (module.js:617:28)
    at Object.Module._extensions..js (module.js:664:10)
    at Module.load (module.js:566:32)
    at tryModuleLoad (module.js:506:12)
    at Function.Module._load (module.js:498:3)
    at Module.require (module.js:597:17)
    at require (internal/module.js:11:18)
    at Object.<anonymous> (/home/motherbase/Code/chatfirebase/functions/node_modules/@google-cloud/firestore/build/src/index.js:39:28) {"metadata":{"emulator":{"name":"functions"},"message":"/home/motherbase/Code/chatfirebase/functions/node_modules/@google-cloud/firestore/build/src/collection-group.js:54\n    async *getPartitions(desiredPartitionCount) {\n          ^\n\nSyntaxError: Unexpected token *\n    at createScript (vm.js:80:10)\n    at Object.runInThisContext (vm.js:139:10)\n    at Module._compile (module.js:617:28)\n    at Object.Module._extensions..js (module.js:664:10)\n    at Module.load (module.js:566:32)\n    at tryModuleLoad (module.js:506:12)\n    at Function.Module._load (module.js:498:3)\n    at Module.require (module.js:597:17)\n    at require (internal/module.js:11:18)\n    at Object.<anonymous> (/home/motherbase/Code/chatfirebase/functions/node_modules/@google-cloud/firestore/build/src/index.js:39:28)"}}
[warn] ⚠  We were unable to load your functions code. (see above) {"metadata":{"emulator":{"name":"functions"}}}
[debug] [2020-11-10T10:01:37.050Z] DEBUG: [worker-~diagnostic~-dea3c775-58fd-4c5d-ad16-e4703a6a22f9]: exited
[debug] [2020-11-10T10:01:37.050Z] DEBUG: [worker-~diagnostic~-dea3c775-58fd-4c5d-ad16-e4703a6a22f9]: FINISHED
